--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Open Graph Demo" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="An Open Graph demo practice" />
+    <meta property="og:description" content="YAn Open Graph demo practice">
     <meta property="og:url" content="https://sashacode11.github.io/opengraph_seo/" />
     <meta property="og:image" content="hhttps://images.unsplash.com/photo-1696591915171-4636a7110161?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx2aXN1YWwtc2VhcmNofDE1MXx8fGVufDB8fHx8fA%3D%3D" />
     </head>
