--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   content="Sean Connery found fame and fortune as the
            suave, sophisticated British agent, James Bond." />
     <meta property="og:url" content="https://sashacode11.github.io/opengraph_seo/" />
-    <meta property="og:image" content="hhttps://images.unsplash.com/photo-1696591915171-4636a7110161?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx2aXN1YWwtc2VhcmNofDE1MXx8fGVufDB8fHx8fA%3D%3D" />
+    <meta property="og:image" content="assets/images/Screenshot from 2024-04-14 14-00-59.png" />
     </head>
 <body>
     <h1>Hello World</h1>
