--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="An Open Graph Demo practice" />
     <meta property="og:url" content="https://sashacode11.github.io/opengraph_seo/" />
-    <meta property="og:image" content="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?size=338&ext=jpg&ga=GA1.1.553209589.1713312000&semt=sph">
+    <meta property="og:image" content="image.png">
     </head>
 <body>
     <h1>Hello World</h1>
